# ComfyUI-Taiyi

./: README.md  __init__.py  pyproject.toml  taiyi_download.py  taiyilink.json
nodes/: taiyixl_loader.py
src/: support_models.py  taiyi_clip_model.py  taiyi_detection.py  taiyi_encode.py  taiyi_sd.py
src/tokenizer/: added_tokens.json
src/tokenizer2/: tokenizer_config.json
