[project]
name = "comfyui-taiyi"
description = "Simple checkpoint loader for TaiyiXL"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Layer-norm/ComfyUI-Taiyi"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "layer-norm"
DisplayName = "ComfyUI-Taiyi"
Icon = ""
